--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -114,12 +114,12 @@
         android:background="@drawable/button_bg"/>
     <TextView
         android:id="@+id/login_message_textview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:text="If you have an account? Login now"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"/>
+        android:gravity="center"
+        android:layout_marginTop="8dp"/>
 
 </LinearLayout>
 
