--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -92,7 +92,7 @@
         android:textStyle="bold"
         android:backgroundTint="@color/primary"
         android:textSize="16sp"
-        android:textColor="@android:color/black"
+        android:textColor="#3C3232"
         android:padding="12dp"
         android:layout_marginTop="8dp"/>
 
